--- a/myproject/templates/app/queue.html
+++ b/myproject/templates/app/queue.html
@@ -1,50 +1,44 @@
-<div class="row py-4">
-	<div class="col-md">
-		<div class="card card-body">
-			<table class="table table-md">
-				<thead>
-					<tr class="text-center">
-						<th scope="col">Queue</th>
-						<th scope="col">Date Created</th>
-						<th scope="col">Reserved Time</th>
-						<th scope="col">Status</th>
-						<th scope="col">Update</th>
-						<th scope="col">Remove</th>
-					</tr>
-				</thead>
-				<tbody id="myTable">
-					<tr class="text-center align-middle">
-						<td>A5621</td>
-						<td>26 January 2021 12:00:17</td>
-						<td class="text-danger">-</td>
-						<td>
-							<h5 class="card bg-warning text-danger my-0 py-1"> Calling </h5>
-						</td>
-						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
-					</tr>
-					<tr class="text-center align-middle">
-						<td>A5622</td>
-						<td>26 January 2021 14:00:54</td>
-						<td class="text-danger">26 January 2021 17:00:00</td>
-						<td>
-							<h5 class="card bg-primary text-white my-0 py-1"> Waiting </h5>
-						</td>
-						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
-					</tr>
-					<tr class="text-center ">
-						<td>A5623</td>
-						<td>26 January 2021 12:00:17</td>
-						<td class="text-danger">-</td>
-						<td>
-							<h5 class="card bg-primary text-white my-0 py-1"> Waiting </h5>
-						</td>
-						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
+	<table class="table table-md">
+		<thead>
+			<tr class="text-center">
+				<th scope="col">Queue</th>
+				<th scope="col">Date Created</th>
+				<th scope="col">Reserved Time</th>
+				<th scope="col">Status</th>
+				<th scope="col">Update</th>
+				<th scope="col">Remove</th>
+			</tr>
+		</thead>
+		<tbody id="myTable2">
+			<tr class="text-center align-middle">
+				<td>A5621</td>
+				<td>26 January 2021 12:00:17</td>
+				<td class="text-danger">-</td>
+				<td>
+					<h5 class="card bg-warning text-danger my-0 py-1"> Calling </h5>
+				</td>
+				<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+				<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+			</tr>
+			<tr class="text-center align-middle">
+				<td>A5622</td>
+				<td>26 January 2021 14:00:54</td>
+				<td class="text-danger">26 January 2021 17:00:00</td>
+				<td>
+					<h5 class="card bg-primary text-white my-0 py-1"> Waiting </h5>
+				</td>
+				<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+				<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+			</tr>
+			<tr class="text-center ">
+				<td>A5623</td>
+				<td>26 January 2021 12:00:17</td>
+				<td class="text-danger">-</td>
+				<td>
+					<h5 class="card bg-primary text-white my-0 py-1"> Waiting </h5>
+				</td>
+				<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+				<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+			</tr>
+		</tbody>
+	</table>
