--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock title %}
 {% block content %}
 <div class="input-group rounded-lg mt-2">
-    <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+    <input id="myInput3" type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
         aria-describedby="search-addon" />
     <span class="input-group-text border-0" id="search-addon">
         <i class="fas fa-search"></i>
@@ -25,7 +25,7 @@
         </nav>
     </div>
 </nav>
-<div class="row">
+<div class="row"  id = "myTable3">
     {% for restaurant in restaurants %}
     {% include 'app/card3Col.html' with restaurant=restaurant %}
     {% endfor %}
