--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -1,19 +1,19 @@
 .imgBg {
-  width: 98%;
+  width: 98% !important;
   max-height: 250px;
   transform: translate(2%, 0);
   padding-bottom: 2%;
-  border-radius: 24px;
+  border-radius: 14px;
 }
 .imgCollab {
   height: 40%;
-  width: 60%;
+  width: 60% !important;
   position: absolute;
-  border-radius: 24px;
+  border-radius: 14px;
   transform: translate(0%, 33%);
 }
 .resImg {
-  border-radius: 24px;
+  border-radius: 14px;
   max-height: 300px;
   max-width: 330px;
 }
