--- a/myproject/templates/app/modalResCard.html
+++ b/myproject/templates/app/modalResCard.html
@@ -39,7 +39,7 @@
          </div>
        </div>
        <div class="modal-footer">
-         <a href="{%url 'foodList' restaurant.resID %}">
+         <a href="{%url 'menu' restaurant.resID %}">
            <button type="button" class="btn btn-primary">
              รายการอาหาร
            </button>
