--- a/myproject/templates/app/menuModal.html
+++ b/myproject/templates/app/menuModal.html
@@ -4,7 +4,7 @@
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header border-0 pb-0 align-self-center">
-         <h5 class="modal-title" id="exampleModalLabel">Edit Menus</h5>
+         <h5 class="modal-title" id="exampleModalLabel">Edit Menu</h5>
        </div>
        <div class="modal-body">
          <div class="card pe-3 ps-3 pb-3" style="">
@@ -24,8 +24,8 @@
                  </a>
                </td>
                <td class="text-center ">
-                 <a class="btn btn-sm btn-danger" data-bs-target="#DeletingMenuModal" data-bs-toggle="modal"
-                   data-bs-dismiss="modal">
+                 <a class="btn btn-sm btn-danger" data-bs-target="#DeletingMenuModal{{menu.menuID}}"
+                   data-bs-toggle="modal" data-bs-dismiss="modal">
                    Delete
                  </a>
                </td>
@@ -50,60 +50,8 @@
    </div>
  </div>
 
- <div class="modal fade " id="AddingMenuModal" tabindex="-1" aria-labelledby="exampleModalLabe2" aria-hidden="true">
-   <div class="modal-dialog modal-dialog-centered">
-     <div class="modal-content ">
-       <div class="modal-header pb-0 border-0 align-self-center">
-         <h5 class="modal-title" id="exampleModalLabe2">Add Menus</h5>
-       </div>
-       <div class="modal-body">
-         <div class="card p-3" style="">
-           <table class="table table-md">
-             <tr class="text-center">
-               <th>Menu</th>
-               <th>Image</th>
-             </tr>
-             <tr id="container">
-               <td class=" col-6"><input type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-sm"></td>
-               <td class="col-6"><input type="file" class="form-control" id="inputGroupFile02"></td>
-             </tr>
-
-           </table>
 
 
-           <div class="modal-footer">
-             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-               Cancel
-             </button>
-             <button type="button" class="btn btn-success" data-bs-dismiss="modal">Save</button>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
-
-
- <div class="modal fade " id="DeletingMenuModal" tabindex="-1" aria-labelledby="exampleModalLabe3" aria-hidden="true">
-   <div class="modal-dialog modal-dialog-centered">
-     <div class="modal-content ">
-       <div class="modal-header pb-0 border-0 align-self-center">
-         <h5 class="modal-title" id="exampleModalLabe3">Delete Confirmation</h5>
-       </div>
-       <div class="modal-body">
-         <h5>Are you sure you wat to delete Menu:{{menu.menuName}} ?</h5>
-       </div>
-       <div class="modal-footer">
-         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-           Cancel
-         </button>
-         <a href="{% url 'menu' restaurant.resID %}">
-           <button type="button" class="btn btn-danger">Confirm</button>
-         </a>
-       </div>
-     </div>
-   </div>
- </div>
-
+ {% include 'restaurants/createMenuModal.html'  %}
  {% include 'restaurants/editMenuModal.html' %}
+ {% include 'restaurants/deleteMenuModal.html' %}
