--- a/myproject/templates/app/executiveControl.html
+++ b/myproject/templates/app/executiveControl.html
@@ -5,7 +5,7 @@
     <div class="d-flex">
      <h2>Branch</h2>
      <a href="{%url 'staffList' restaurant.resID%}" class = "btn btn-primary" style = "margin-left : 77%">Member</a>
-     <a href="{%url 'foodList' restaurant.resID %}" class = "btn btn-secondary ms-2">Menu edit</a>
+     <a href="{%url 'menu' restaurant.resID %}" class = "btn btn-secondary ms-2">Menu edit</a>
     </div>
      <input class="form-control mt-4 mb-3" id="Search" type="text" placeholder="Search..">
      <br>
