--- a/myproject/templates/app/managerControl.html
+++ b/myproject/templates/app/managerControl.html
@@ -61,7 +61,7 @@
         <a href="{%url 'staffList' restaurant.resID%}" class="btn btn-primary mt-4 me-2" style="width : 25%">Staff
             member</a>
         <!--รอใส่ navbar-->
-        <a href="{%url 'foodList' restaurant.resID %}" class="btn btn-secondary mt-4" style="width : 25%">Menu
+        <a href="{%url 'menu' restaurant.resID %}" class="btn btn-secondary mt-4" style="width : 25%">Menu
             edit</a>
         <!--รอใส่ navbar-->
     </div>
