--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -55,7 +55,8 @@
   </div>
 </div>
 
-{% include 'app/modalResCard.html' with restaurant=restaurant %}
-{% include 'app/map.html' with restaurant=restaurant %}
+{% include 'app/map.html' %}
+{% include 'app/review.html'  %}
+{% include 'app/modalResCard.html' %}
 {% endblock content %}
 </div>
