--- a/myproject/templates/app/resProfile.html
+++ b/myproject/templates/app/resProfile.html
@@ -5,7 +5,7 @@
     <div class="col-4 mt-4">
         <div class="row-md-4">
             <div class="card ms-5 mb-0" style="max-width : 65%; max-height : 50%">
-                <img src="{% static 'images/profile.png' %}" class="card-img-top" alt="...">
+                <img src="{% static 'images/restaurant-shabushi-logo.jpg' %}" class="card-img-top" alt="...">
                 <div class="d-grid">
                     <label for="files" class="btn btn-primary rounded-0">Change Photo</label>
                     <input id="files" style="visibility:hidden; height:0" type="file">
@@ -16,9 +16,8 @@
             <div class="col-md">
                 <div class="profile-work">
                     <p>Company / Restaurant</p>
-                    <a href="{% url 'managerControl' restaurant.resID%}">Detail</a><br />
-                    <a href="{% static 'app/modalBusiness.html' %}" data-bs-toggle="modal"
-                        data-bs-target="#business">Start my own</a><br />
+                    <a href="#">Detail</a><br />
+                    {% comment %} <a href="#" data-bs-toggle="modal" data-bs-target="#business">Start my own</a><br /> {% endcomment %}
                 </div>
             </div>
         </div>
@@ -43,16 +42,11 @@
                             <a class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
                                 href="#profile" role="tab" aria-controls="profile" aria-selected="false">History</a>
                         </li>
-                        <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="owner-tab" data-bs-toggle="tab" data-bs-target="#owner"
-                                href="#owner" role="tab" aria-controls="owner" aria-selected="false">Owner</a>
-                        </li>
                     </ul>
                 </div>
             </div>
             <div class="col-3 mt-4">
-                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editprofile"
-                    name="btnAddMore" value="Edit Profile" />
+                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editprofile" name="btnAddMore" value="Edit Profile" />
             </div>
         </div>
         <div class="row">
@@ -164,114 +158,9 @@
                                     <td>Manager</td>
                                     <td>13/08/2021</td>
                                 </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>11/05/2021</td>
-                                    <td>Bar-B-Q</td>
-                                    <td>Staff</td>
-                                    <td>12/05/2021</td>
-                                </tr>
-
                             </tbody>
                         </table>
                     </div>
-                </div>
-                <div class="tab-pane fade pb-5" id="owner" role="tabpanel" aria-labelledby="owner-tab">
-                    
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>User Id</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ferby123</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ferb Fletcher</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Workplace</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Bar-B-Q</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Position</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Manager</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Date of birth</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>12/02/2021</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Gender</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Male</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>ferby@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Phone</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>123 456 7890</p>
-                            </div>
-                        </div>
-
-               
                 </div>
             </div>
         </div>
