--- a/myproject/templates/app/map.html
+++ b/myproject/templates/app/map.html
@@ -5,7 +5,7 @@
             <div class="row ">
                 <button id="" class="" onclick="showPosition({{restaurant.location}})">Test</button>
                 <div id="mapholder">
-                <img id="mapholder" src="" class="imgBg " alt="Responsive image">
+                    <img id="mapholder" src="" class="imgBg " alt="Responsive image">
                 </div>
             </div>
             <div class="card-body">
@@ -18,7 +18,7 @@
                 <h4 class="card-title">
                     <a href="www.instagram.com" class="text-decoration-none text-reset">
                         <i class="fab fa-instagram text-secondary"></i>
-                        <span> Jay Och</span>
+                        <span> {{restaurant.ig}}</span>
                     </a>
                 </h4>
             </div>
@@ -32,7 +32,7 @@
                 <h4 class="card-title">
                     <a href="www.facebook.com" class="text-decoration-none text-reset">
                         <i class="fab fa-facebook-square text-secondary"></i>
-                        <span> Jay Och</span>
+                        <span> {{restaurant.fb}}</span>
                     </a>
                 </h4>
             </div>
