--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -24,7 +24,7 @@
               <i class="fas fa-map-marker-alt text-secondary"></i>
               <span> 2 km</span>
             </p>
-            <p class="card-text">Openning Hours: 11:00 AM. - 22:00 PM.</p>
+            <p class="card-text">Openning Hours: {{restaurant.open}} - {{restaurant.close}}</p>
           </div>
         </div>
         <div class="col-6 align-self-end">
