--- a/myproject/templates/app/navbar.html
+++ b/myproject/templates/app/navbar.html
@@ -36,12 +36,12 @@
         <div class="nav-item col-4 d-flex justify-content-center">
             <div class="card col-9">
                 <div class="card-body" style="padding: 16px 25px">
-                    <table class = "col-12 justify-content-between">
+                    <table class="col-12 justify-content-between">
                         <tr>
                             <td>
                                 <h5 class="card-title d-flex justify-content-start">Queue Number : </h5>
                             </td>
-                            <td >
+                            <td>
                                 <h5 class="card-title d-flex justify-content-center">None</h5>
                             </td>
                         </tr>
@@ -49,7 +49,7 @@
                             <td>
                                 <h6 class="card-subtitle mb-2 text-muted d-flex justify-content-start">Status :</h6>
                             </td>
-                            <td >
+                            <td>
                                 <h5 class="card-subtitle mb-2 text-muted d-flex justify-content-center"> No queue</h5>
                             </td>
                         </tr>
@@ -62,13 +62,20 @@
         {% if request.user.is_authenticated %}
         <table class="col-4 d-flex justify-content-end">
             <tr>
-                <td class="me-4 text-center text-white h5 pe-4">Welcome, {{request.user.fullName}}</td>
+                <td class="me-4 text-center text-white h5 pe-4">Welcome, {{request.user.fName}}</td>
                 <td>
-                    <a href="{%url 'users_logout'%}">
-                        <button type="button" class="btn btn-primary btn-lg"
+
+                    <a href="{%url 'userprofile' request.user.id %}">
+                        <img src="{{ request.user.picture.url }}" class="border border-white"
+                            style="height: 60px; max-width: 60px;">
+                    </a> 
+                
+                </td>
+                <td>
+                    <a href = "{%url 'users_logout'%}">
+                        <button type="button" class="btn btn-danger btn-lg"
                             style="background-color:#E91E63; margin: 0px 15px">Logout</button>
                     </a>
-
                 </td>
             </tr>
         </table>
