--- a/myproject/templates/app/navbar.html
+++ b/myproject/templates/app/navbar.html
@@ -97,7 +97,7 @@
             <td>
 
                 <a href="{%url 'userprofile' request.user.id %}">
-                    <img src="{{ request.user.picture.url }}" class="img border border-white"
+                    <img src="{{ request.user.picture.url }}" class="img border border-white rounded-3"
                         style="height: 60px; width: 60px;">
                 </a>
 
